swagger annotations and swagger files added for api documentation (some features updated)
