# app/Http/Controllers/Controller.php
@@ -6,7 +6,12 @@ use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
 use Illuminate\Foundation\Bus\DispatchesJobs;
 use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
+
+
 /**
+ * @OA\OpenApi(
+ *      security={{ "BearerAuth": {} }}
+ *  )
  * @OA\Info(title="CMS manager", version="0.1")
  * @OA\Server(
  *      url="http://localhost/artancms/public",
@@ -18,6 +23,16 @@ use Illuminate\Routing\Controller as BaseController;
  *     scheme="bearer",
  *     bearerFormat="JWT",
  *     description="Authentication using Bearer token (Sanctum)"
+ * )
+ * @OA\SecurityScheme(
+ *     securityScheme="cookieSession",
+ *     type="apiKey",
+ *     in="cookie",
+ *     name="laravel_session",
+ *     description="Authentication using session cookie (laravel_session)"
+ * )
+ * @OA\Security(
+ *     securityScheme="cookieSession"
  * )
  */
 class Controller extends BaseController
